src/scope/snapshots/rnix_analyzer__scope__tests__scope_let_in_inherit_from.snap
---
source: src/scope/mod.rs
expression: scopes.0
---
[
    Scope {
        kind: LetIn,
        defines: {
            "a": Definition {
                id: 0,
                name: "a",
                text_range: [4; 5),
            },
            "b": Definition {
                id: 1,
                name: "b",
                text_range: [25; 26),
            },
        },
        text_range: [0; 38),
    },
]
