src/scope/snapshots/rnix_analyzer__scope__tests__scope_let_in_multiple_nested_variables-2.snap
---
source: src/scope/mod.rs
expression: scope_tree
---
InverseScopeTree {
    leaf_scopes: [
        ScopePath(
            [
                Scope {
                    kind: LetIn,
                    defines: {
                        "a": Definition {
                            id: 0,
                            name: "a",
                            text_range: [4; 5),
                        },
                    },
                    text_range: [0; 30),
                },
            ],
        ),
    ],
}
