src/scope/snapshots/rnix_analyzer__scope__tests__scope_let_in_single_variable.snap
---
source: src/scope/mod.rs
expression: scopes.0
---
[
    Scope {
        kind: LetIn,
        defines: {
            "a": Definition {
                id: 0,
                name: "a",
                text_range: [4; 5),
            },
        },
        text_range: [0; 15),
    },
]
